Users Related Modification

--- a/config/application.properties
+++ b/config/application.properties
@@ -1,5 +1,5 @@
 server.port=8888
-server.context-path=/admin
+server.context-path=/
 
 #Urls
-com.lams.user.url=localhost:8080/user
+com.lams.user.url=http://localhost:8181/lams
